@@ -1,14 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD xmwde-0_p20120304.ebuild 924 RMD160 bf95bc6dc5a93109a8ff8d435f62e97c4b75f78a SHA1 f0be50d732ade3ea4e404a7c14d7443a98282d5d SHA256 574369ffd9b3da67d275fc7ebbf812f420178d4b726182e73611c8f1c40d18af
-EBUILD xmwde-0_p20120505.ebuild 914 RMD160 9b5cd04b31f13f1ac61a9a78af0005a358014924 SHA1 bb4de9df5229479ff353eec43480f46bebc64ef6 SHA256 d8601f379f47d1410898c0f58e432450d805ff2bcf317acf919e0a558f09544b
-MISC ChangeLog 2281 RMD160 a73b0194bbf1a68712c986daf4f8c3d591c055d9 SHA1 d8c7deed122a5b80dd5138ec7615fd04fe8c1ce7 SHA256 13aa57b1cfcdee50baf9edb6452f136331055172e50fa845b3cd64deb6625d55
+EBUILD xmwde-0_p20120510.ebuild 1220 RMD160 22498dd1ca371356f094af6811c3da27b68b455f SHA1 2ab04e4aa3cce2ab3f1d44cd3abdda307c2c7446 SHA256 cb386e7f5c207c3b2bdf66242159a90ccb9909c163ecfbb67614280f2bf97240
+MISC ChangeLog 2487 RMD160 236faa066df6ccb82521f5eb3d279dca428102f1 SHA1 6eebd71a25f2df4d464bc4aa93af03a2087d5019 SHA256 5a90687d35182c39100f8eceed34530f1189fb30f522aa7a00c148a9f69532a6
 MISC metadata.xml 245 RMD160 6b03982a4d5f32d9fa6b9259ae36f9fcb07c8404 SHA1 fb16c7b4c5ab071dd979f761b8bb075f5396b737 SHA256 375a1da02cd2c393ce2378a73c1ce08134bc030b3bb378c6a4d6ca9cd5be1f8d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk+lFCYACgkQknrdDGLu8JBA5gD/d+as1ZYY8ZijUIrxq5fATREU
-tiNSKvpC5+N3+lHfBwMA/0CaqCvx9ZgvP23Y2LxRVryDs+4tdPHv+8TxOf+wQwH7
-=OTVR
+iF4EAREIAAYFAk+rXLsACgkQknrdDGLu8JBSOAD+O6oGdJXMUNr3psQM5nu/8plm
+T9EpdGZp/pZBvZLmB9UBAIlzbv4lYF/VMeOtRavIWkqDDRBSM4+qreSACUJ70R4L
+=QpUk
 -----END PGP SIGNATURE-----
