@@ -9,7 +9,7 @@ SRC_URI=""
 
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE=""
+IUSE="minimal"
 
 RDEPEND="
 	app-admin/conky
@@ -23,10 +23,10 @@ RDEPEND="
 	app-text/mupdf
 	app-text/paps
 	gnome-base/gnome-keyring
-	gnome-extra/gnome-utils
 	media-fonts/dina
 	media-fonts/terminus-font
 	media-gfx/feh
+	media-gfx/scrot
 	net-misc/hotot
 	virtual/xmwce
 	x11-apps/setxkbmap
@@ -37,7 +37,7 @@ RDEPEND="
 	x11-apps/xset
 	x11-base/xorg-server
 	x11-misc/alock
-	x11-misc/dmenu
+	x11-misc/dmenu[xft]
 	x11-misc/trayer-srg
 	x11-misc/wmname
 	x11-misc/x2x
@@ -47,5 +47,19 @@ RDEPEND="
 	x11-misc/xscreensaver
 	x11-terms/rxvt-unicode[256-color,xft]
 	x11-wm/cwm
-	media-fonts/dina
-	"
+	media-fonts/font-misc-misc
+	!minimal? (
+		app-text/evince
+		app-text/gv
+		mail-client/thunderbird
+		media-gfx/gimp
+		media-sound/audacity
+		media-sound/baudline
+		media-video/avidemux
+		media-video/mplayer
+		net-im/pidgin
+		net-p2p/qbittorrent
+		sci-electronics/osqoop
+		www-client/firefox
+		x11-terms/xterm
+	)"
