@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*xmwde-0_p20120510 (10 May 2012)
+
+  10 May 2012; Michael Weber <xmw@gentoo.org> -xmwde-0_p20120304.ebuild,
+  -xmwde-0_p20120505.ebuild, +xmwde-0_p20120510.ebuild:
+  Version bump, gnome-screenshot -> scrot
+
 *xmwde-0_p20120505 (05 May 2012)
 
   05 May 2012; Michael Weber <xmw@gentoo.org> xmwde-0_p20120304.ebuild,
